Add drastic performance improvement